# ZLToolKitParody

./: .gitignore  CMakeLists.txt  LICENSE
tests/: test_cmd.cpp  test_cmd_option.cpp  test_function_traits.cpp  test_ini.cpp  test_variant.cpp
tools/: File.h  cmd.cpp  cmd.h  function_traits.h  mini.cpp  mini.h  onceToken.h  option.cpp  option.h  utils.cpp  utils.h  variant.cpp  variant.h
